# suave

./: .buildinfo  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.orig  README.md  _BACKUP_2471909.gitignore  _LOCAL_2471909.gitignore  api.html  build_docker_images.sh  citing.html  docker.html  extend.html  genindex.html  index.html  installation.html  objects.inv  package.xml  pipeline_inspection.rosinstall  py-modindex.html  related.html  run.html  search.html  searchindex.js  setup.cfg  suave.rosinstall  troubleshooting.html
.doctrees/: api.doctree  citing.doctree  docker.doctree  environment.pickle  extend.doctree  index.doctree  installation.doctree  related.doctree  run.doctree  troubleshooting.doctree
_autosummary/: suave.bluerov_gazebo.BlueROVGazebo.html  suave.bluerov_gazebo.html  suave.follow_pipeline_lc.PipelineFollowerLC.html  suave.follow_pipeline_lc.html  suave.follow_pipeline_lc.main.html  suave.follow_pipeline_lc.spin_srv.html  suave.pipeline_detection.PipelineDetection.html  suave.pipeline_detection.html  suave.pipeline_detection.main.html  suave.pipeline_detection_wv.PipelineDetectionWV.html  suave.pipeline_detection_wv.html  suave.pipeline_detection_wv.main.html  suave.recover_thrusters_lc.RecoverThrustersLC.html  suave.recover_thrusters_lc.html  suave.recover_thrusters_lc.main.html  suave.spiral_search_lc.SpiralSearcherLC.html  suave.spiral_search_lc.html  suave.spiral_search_lc.main.html  suave.spiral_search_lc.spiral_points.html  suave.task_bridge.TaskBridge.html  suave.task_bridge.html  suave.task_bridge_none.TaskBridgeNone.html  suave.task_bridge_none.html  suave.task_bridge_none.main.html  suave.thruster_monitor.ThrusterMonitor.html  suave.thruster_monitor.html  suave.thruster_monitor.main.html  suave.water_visibility_observer.WaterVisibilityObserver.html  suave.water_visibility_observer.html  suave.water_visibility_observer.main.html  suave_monitor.thruster_monitor.ThrusterMonitor.html  suave_monitor.thruster_monitor.html  suave_monitor.thruster_monitor.main.html  suave_monitor.thruster_monitor.read_thruster_events.html  suave_monitor.water_visibility_observer.WaterVisibilityObserver.html  suave_monitor.water_visibility_observer.html  suave_monitor.water_visibility_observer.main.html
_sources/: api.rst.txt  citing.md.txt  docker.md.txt  extend.md.txt  installation.md.txt  related.md.txt  troubleshooting.md.txt
config/: pipeline_inspection.owl
docker/: README.md  build_images.sh  dockerfile-kasm-core-jammy  dockerfile-kasm-ubuntu-jammy-desktop-minimal  dockerfile-suave
launch/: mavros.launch.py  mission.launch.py  simulation.launch.py
metacontrol/: package.xml  setup.cfg  setup.py
pipeline_inspection/: README.md  package.xml  pipeline_inspection.rosinstall  setup.py
pipeline_inspection/launch/: mavros.launch.py  mission.launch.py  pipeline_env.launch.py  pipeline_inspection.launch.py  simulation.launch.py
pipeline_inspection/pipeline_inspection/: bluerov_gazebo.py  follow_pipeline.py  follow_waypoints.py  mission.py  pipeline_node.py  recover_thrusters_lc.py  spiral_mission.py  spiral_pattern_position.py  thruster_failures.py  thruster_monitor.py
pipeline_inspection/scripts/: follow_pipeline.py  follow_waypoints.py  mission.py  pipeline_node.py  spiral_mission.py  thruster_failures.py
pipeline_inspection/srv/: GetPath.srv
pipeline_inspection_metacontrol/: package.xml  setup.cfg  setup.py
pipeline_inspection_msgs/: CMakeLists.txt  package.xml
runner/: SEAMS2023_results_run.sh  example_run.sh  headless_runner.sh  runner.sh
scripts/: .lawn_mower.py.swp  README.md  follow_pipeline.py  follow_waypoints.py  lawn_mower.py  lawn_mower_position.py  lawn_mower_vel.py  mission.py  no_gps.py  with_gps.py  (+3 more)
suave_managing/suave_bt/: CMakeLists.txt  package.xml
suave_managing/suave_bt/bts/: suave.xml  suave_extended.xml
suave_managing/suave_bt/include/suave_bt/: action_arm_thrusters.hpp  action_change_mode.hpp  action_inspect_pipeline.hpp  action_recharge_battery.hpp  action_search_pipeline.hpp  action_set_guided_mode.hpp  condition_battery_level.hpp  condition_thrusters_ok.hpp  condition_water_visibility.hpp  is_pipeline_found.hpp  is_pipeline_inspected.hpp  suave_mission.hpp  visibility_control.h
suave_managing/suave_bt/launch/: suave_bt.launch.py  suave_bt_extended.launch.py
suave_managing/suave_bt/src/: suave_bt.cpp  suave_bt_extended.cpp
suave_managing/suave_bt/src/suave_bt/: action_arm_thrusters.cpp  action_change_mode.cpp  action_inspect_pipeline.cpp  action_recharge_battery.cpp  action_search_pipeline.cpp  action_set_guided_mode.cpp  condition_battery_level.cpp  condition_thrusters_ok.cpp  condition_water_visibility.cpp  is_pipeline_found.cpp  is_pipeline_inspected.cpp  suave_mission.cpp
suave_missions/: package.xml  setup.cfg  setup.py
suave_missions/config/: mission_config.yaml  planta_exp1_mission_config.yaml  planta_exp2_mission_config.yaml  planta_exp3_mission_config.yaml  runner_mission_config.yaml
suave_missions/launch/: const_distance_mission.launch.py  const_distance_mission_no_adapt.launch.py  metacontrol_mission.launch.py  mission.launch.py  mission_bringup.launch.py  none_mission.launch.py  random_mission.launch.py  time_constrained_mission.launch.py  time_constrained_mission_no_adapt.launch.py
suave_missions/results/: seams2023_mission_config.yaml  seams2023_results.csv
suave_missions/suave_missions/: const_dist_mission.py  const_dist_mission_no_adapt.py  inspection_mission.py  mission_metrics.py  mission_planner.py  time_constrained_mission.py  time_constrained_mission_no_adapt.py
suave_monitor/: package.xml  setup.cfg  setup.py
suave_monitor/suave_monitor/: battery_monitor.py  thruster_monitor.py  water_visibility_observer.py
suave_runner/: README.md  package.xml  setup.cfg  setup.py
suave_runner/config/: runner_config.yml
suave_runner/docker/: Dockerfile  README.md
suave_runner/docker/log/: latest  latest_version-check
suave_runner/launch/: suave_runner_launch.py
suave_runner/suave_runner/: statistical_analysis.py  suave_runner.py
suave_runner/test/: test_suave_runner.py
(+230 files in other folders)
