<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipeline_inspection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="g.rezendesilva@tudelft.nl">gus</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_export_depend>mavros</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <build_depend>mavros</build_depend>

  <exec_depend>pipeline_inspection_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>mavros_wrapper</exec_depend>
  <exec_depend>ros_gz</exec_depend>

  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
