<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suave_monitor</name>
  <version>0.0.0</version>
  <description>Monitor nodes for SUAVE</description>
  <maintainer email="g.rezendesilva@tudelft.nl">gus</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>diagnostic_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
