<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>suave_runner</name>
  <version>0.0.0</version>
  <description>Runners for SUAVE</description>

  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <author email="g.rezendesilva@tudelft.nl">Gustavo Rezende</author>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
