<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suave_bt</name>
  <version>0.0.0</version>
  <description>BT implementation of a managing system for SUAVE</description>
  <maintainer email="g.rezendesilva@tudelft.nl">gus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>suave</depend>
  <depend>suave_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>system_modes_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_cpp_dbgsym</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
